# fh6-cloudbeats-custom-radio

./: .clang-tidy  .dockerignore  .gitignore  .prettierignore  .prettierrc.json  .stylelintrc.json  CMakeLists.txt  Dockerfile  NOTICE  README.md  config.example.toml  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: build.yml
app/: CMakeLists.txt  app.manifest  app.rc  main.cpp
include/fh6/: audio_source_manager.hpp  config.hpp  playback_dsp.hpp
include/fh6/fmod/: dsp_bridge.hpp  dsp_control_loop.hpp  radio_discovery.hpp
include/fh6/sources/: jellyfin_source.hpp  local_file_source.hpp  net_ease_source.hpp  spotify_source.hpp  youtube_music_source.hpp
scripts/: build-app.ps1  build.ps1  build.sh  convert_logo.py  dist-readme.txt  fetch-media.ps1  get-deps.sh
src/: audio_source_manager.cpp  bridge.cpp  config.cpp  subprocess.cpp
src/fmod/: dsp_bridge.cpp  dsp_control_loop.cpp  game_state_probe.cpp  sig_scanner.cpp
src/http/: http_server.cpp
src/proxy/: dll_main.cpp
src/sources/: jellyfin_source.cpp  local_file_source.cpp  net_ease_source.cpp  spotify_source.cpp  youtube_music_source.cpp
